Infer the study config from the URL on the frontend
Javascript browsers cannot, for security reasons, read environment variables.

There are workarounds using config files that are even automatically generated
using webpack, but we are not using webpack now and are unlikely to use it in
the future given that this is a temporary solution.

So we use the same approach as we do on the phone to infer the study name from
the URL.

However, we cannot test this functionality easily on dev, because the hostname
is always "localhost". Looking at search params only in that case to finish testing.

Testing done:
- Accessed frontend using http://localhost:3274/, saw the staging config
- Accessed it using http://localhost:3274/?study_config=durham, saw the durham config

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -340,10 +340,30 @@
                 });
             };
 
+            /*
+             * Copied and adapted from the phone `dynamic_config.js`
+             * Adapted by supporting program name via parameter to make it
+             * easier to test against localhost
+             */
+            const _getStudyName = function(connectUrl) {
+              const orig_host = new URL(connectUrl).hostname;
+              // If we are running this on dev, use a param instead to enable testing
+              if (orig_host == "localhost") {
+                const param_study_name = new URL(connectUrl).searchParams.get("study_config");
+                return param_study_name == null? "stage-program" : param_study_name;
+              }
+              const first_domain = orig_host.split(".")[0];
+              if (first_domain == "openpath-stage") { return "stage"; }
+              const openpath_index = first_domain.search("-openpath");
+              if (openpath_index == -1) { return undefined; }
+              const study_name = first_domain.substr(0,openpath_index);
+              return study_name;
+            }
+
 			$(function() {
 				$(document).ready(function() {
 					// Simple solution to program/study plots dropdown; load the config and corresponding metrics.html
-					const STUDY_CONFIG = 'stage-program';
+					const STUDY_CONFIG = _getStudyName(window.location);
 					$.getJSON('https://raw.githubusercontent.com/e-mission/nrel-openpath-deploy-configs/main/configs/' + STUDY_CONFIG + '.nrel-op.json', function(data) {
 						// Load list of plots corresponding to study/program
 						if (data.intro.program_or_study=='program') {
