Ensure that the program dropdown is loaded before the preconfigured metrics are created
before this change

```
dashboard_1        | [2022-09-21T22:32:41.066Z]  "GET /plots/ntrips_mode_confirm_2022_09_null.txt" "Mozilla/5.0 (Macintosh; Intel Mac OS X 10.15; rv:91.0) Gecko/20100101 Firefox/91.0"
dashboard_1        | [2022-09-21T22:32:41.069Z]  "GET /plots/ntrips_mode_confirm_2022_09_null.txt" Error (404): "Not found"
dashboard_1        | [2022-09-21T22:32:41.098Z]  "GET /plots/ntrips_mode_confirm_2022_09_null.png" "Mozilla/5.0 (Macintosh; Intel Mac OS X 10.15; rv:91.0) Gecko/20100101 Firefox/91.0"
dashboard_1        | [2022-09-21T22:32:41.098Z]  "GET /plots/miles_mode_confirm_2022_09_default.txt" "Mozilla/5.0 (Macintosh; Intel Mac OS X 10.15; rv:91.0) Gecko/20100101 Firefox/91.0"
dashboard_1        | [2022-09-21T22:32:41.100Z]  "GET /plots/ntrips_mode_confirm_2022_09_null.png" Error (404): "Not found"
```

after this change

```
dashboard_1        | [2022-09-21T23:03:51.832Z]  "GET /plots/ntrips_mode_confirm_2022_09_default.txt" "Mozilla/5.0 (Macintosh; Intel Mac OS X 10.15; rv:91.0) Gecko/20100101 Firefox/91.0"
dashboard_1        | [2022-09-21T23:03:51.835Z]  "GET /plots/ntrips_mode_confirm_2022_09_default.txt" Error (404): "Not found"
dashboard_1        | [2022-09-21T23:03:51.843Z]  "GET /plots/ntrips_mode_confirm_2022_09_default.png" "Mozilla/5.0 (Macintosh; Intel Mac OS X 10.15; rv:91.0) Gecko/20100101 Firefox/91.0"
dashboard_1        | [2022-09-21T23:03:51.845Z]  "GET /plots/ntrips_mode_confirm_2022_09_default.png" Error (404): "Not found"
```

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -331,11 +331,15 @@
                 // add the initial metrics by selecting values and then simulating a click
                 // this avoids us having to refactor out the code to add a new plot
                 // which relies heavily on the mappings stored in the options
-                metricList.forEach((plot_val) => {
-                    console.log("Adding metric for "+plot_val);
-                    $("#metric").val(plot_val);
-                    $('.js-add-new').click();
-                });
+                setTimeout(function() {
+                    metricList.forEach((plot_val) => {
+                        console.log("Adding metric for "+plot_val);
+                        $("#metric").val(plot_val);
+                        $('.js-add-new').click();
+                    });
+                }, 500);
+                // we pick 500 ms here because the delay between working and non-working loads
+                // is 0.098 - 0.066 = 0.032 seconds = 32 ms, so 500 ms delay should be pretty safe
             };
 
             /*
