Change the default graph to be the weekday instead of the day
Since it is more meaningful

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -387,7 +387,7 @@
                                 "ntrips_mode_confirm",
                                 "miles_mode_confirm",
                                 "ntrips_purpose",
-                                "ntrips_per_day",
+                                "ntrips_per_weekday",
                                 "ts_emissions_user"
                             ]);
 						};
