Recompute all prior graphs + create an "all" graph
We have noticed that many users label their trips once a week or once every two
weeks. This means that computing metrics for only the current month is no
longer enough. Computing the metrics does not appear to be very time-consuming
(current run time for Durham is around 10 minutes), and this will ensure that
at least every label is counted properly for the metrics.

There was also a request from a stakeholder to display all the results from the
beginning of the program.

This change:
- pulls out compute_for_date into a separate function
- calls it once with None, None to generate the aggregate for the entire program
- calls it once with every month of the program so far

On the frontend, the corresponding changes are:
- to have an "All data" entry in the dates
- remove the `_` between the date and the program since the all date file name
  is of the form `ntrips_purpose_default.png`.
    - without this change, even if the date value for "All data" is '', we
      would end up with `ntrips_purpose__default.png`, which does not exist
    - ensure that this is the value selected by default

Testing done:
- Ran the generic metrics notebook ``python bin/generate_plots.py generic_metrics.ipynb default`

```
About to download config from https://raw.githubusercontent.com/e-mission/nrel-openpath-deploy-configs/main/configs/stage-program.nrel-op.json
Successfully downloaded config with version 1 for Staging environment for testing programs only and data collection URL https://openpath-stage.nrel.gov/api/
Running at 2022-10-22T19:37:46.227558+00:00 with args Namespace(date=None, plot_notebook='generic_metrics.ipynb', program='default') for range (<Arrow [2020-09-01T00:00:00+00:00]>, <Arrow [2022-10-01T00:00:00+00:00]>)
Running at 2022-10-22T19:37:46.286650+00:00 with params [Parameter('year', int), Parameter('month', int), Parameter('program', str, value='default'), Parameter('study_type', str, value='program')]
...
Running 

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -395,17 +395,23 @@
                         const dates = getMonthList(
                             Number.parseInt(data.intro.start_month),
                             Number.parseInt(data.intro.start_year));
-                        var date_options = '';
+                        var date_options = "<option value=''>All data</option>";
                         for (var i=0;i<dates.length;i++){
                             const paddedMonth = String(dates[i][0]).padStart(2, '0');
                             const currYear = dates[i][1];
-                            date_options += `<option value='${currYear}_${paddedMonth}'>` + dates[i][0] + '/' + dates[i][1] + '</option>';
+                            // add a trailing _ to support the "All data" option
+                            // consistent with the image file construction `imgFile`
+                            date_options += `<option value='${currYear}_${paddedMonth}_'>` + dates[i][0] + '/' + dates[i][1] + '</option>';
                         }
                         $('#date').append(date_options);
-                        // Ensure that the default option is the most recent
-                        const lastVal = $("#date option:last-child").val();
+                        // The firstVal is now "everything", which will have
+                        // the biggest numbers and look most impressive
+                        // so let's stick with that and not reset to the lastVal
+                        /*
+                        // const lastVal = $("#date option:last-child").val();
                         // by setting the current val to the last one
-                        $("#date").val(lastVal);
+                        // $("#date").val(lastVal);
+                        */
 					    $('#program').load('programs.html');
                         const dynamicPublicDashboardName = `${data.intro.translated_text.en.deployment_name} Public Dashboard`
                         const projectJoinPage = data.server.connectUrl.replace("api", "join");
@@ -451,8 +457,12 @@
 					const sizex = $("#metric option:selected").data("sizex");
 					const sizey = $("#metric option:selected").data("sizey");
 					const labelText = metricLabel+" "+dateLabel+" "+programLabel;
-					const imgFile = "plots/"+metric+"_"+dateVal+"_"+program+".png";
-          			const altTextFile = "plots/"+metric+"_"+dateVal+"_"+program+".txt";
+                    // the date val now has a trailing `_` to support the "entire program" option
+                    // the file name is similar to ntrips_purpose_default.png
+                    // and without this change, even if we set the dateVal to ''
+                    // we would try to load ntrips_purpose__default.png
+					const imgFile = "plots/"+metric+"_"+dateVal+program+".png";
+          			const altTextFile = "plots/"+metric+"_"+dateVal+program+".txt";
           			const altText = loadFile(altTextFile);
 					const nw = ["<li data-min-sizex='2' data-min-sizey='2'>"
 						+ labelText
