Don't hang if there is missing information
Without this change, if the start month and year were not defined, they would be NaN.
So adding to them would also result in NaN, and result in an infinite loop in `getMonthList`
since curr_month would never equal end_month.

Fixed by returing early if the month or year are NaN.

Now, we may still have missing entries, but at least that won't hose the users's browser

Testing done:
- Loaded http://localhost:3274/?study_config=denver-casr
- before the change, got message that the page is slowing down my computer
- after the change, two graphs loaded, others did not. Page did not have any loading slowness

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -306,6 +306,10 @@
 			};
 
 			function getMonthList (start_month, start_year) {
+                if (isNaN(start_month) || isNaN(start_year)) {
+                    console.log("start_month = "+start_month+" start_year "+start_year+" early return");
+                    return [];
+                }
 				const date = new Date();
 				const dates = [];
 				const end_month = date.getMonth() + 1;
@@ -392,10 +396,10 @@
                             ]);
 						};
                         // Figure out all months since start date to present
+                        var date_options = "<option value=''>All data</option>";
                         const dates = getMonthList(
                             Number.parseInt(data.intro.start_month),
                             Number.parseInt(data.intro.start_year));
-                        var date_options = "<option value=''>All data</option>";
                         for (var i=0;i<dates.length;i++){
                             const paddedMonth = String(dates[i][0]).padStart(2, '0');
                             const currYear = dates[i][1];
