--- a/frontend/metrics_study.html
+++ b/frontend/metrics_study.html
@@ -1,15 +1,15 @@
 <!-- Generic -->
-<option value="ntrips_mode_confirm" data-sizex="4" data-sizey="4">Number of trips</option>
-<option value="ntrips_commute_mode_confirm" data-sizex="4" data-sizey="4">Number of commute trips</option>
-<option value="ntrips_purpose" data-sizex="4" data-sizey="4">Trip count by purpose</option>
-<option value="ntrips_under10miles_mode_confirm" data-sizex="4" data-sizey="4">Trip count under 10 miles</option>
-<option value="miles_mode_confirm" data-sizex="4" data-sizey="4">Trip miles by mode</option>
-<option value="average_miles_mode_confirm" data-sizex="6" data-sizey="4">Average trip length</option>
-<option value="average_miles_mode_confirm2" data-sizex="6" data-sizey="4">Average trip length (selected by users)</option>
-<option value="ntrips_per_day" data-sizex="6" data-sizey="4">Trip frequency</option>
-<option value="ntrips_per_weekday" data-sizex="6" data-sizey="4">Trip frequency (weekday)</option>
-<option value="ts_emissions_user" data-sizex="8" data-sizey="2">Timeseries of emissions</option>
-<option value="ts_energy_user" data-sizex="8" data-sizey="2">Timeseries of energy</option>
-<option value="ts_emissions_vmt" data-sizex="8" data-sizey="2">Timeseries of emissions per mile</option>
-<option value="ts_users" data-sizex="8" data-sizey="2">Timeseries of active users</option>
-<option value="ts_all_modes" data-sizex="8" data-sizey="2">Timeseries of all mode shares</option>
+<option value="ntrips_mode_confirm" data-sizex="4" data-sizey="4">Número de viajes</option>
+<option value="ntrips_commute_mode_confirm" data-sizex="4" data-sizey="4">Numero de viajes diarios</option>
+<option value="ntrips_purpose" data-sizex="4" data-sizey="4">Recuento de viajes por propósito</option>
+<option value="ntrips_under10miles_mode_confirm" data-sizex="4" data-sizey="4">Recuento de viajes de menos de 10 millas</option>
+<option value="miles_mode_confirm" data-sizex="4" data-sizey="4">Millas de viaje por modo</option>
+<option value="average_miles_mode_confirm" data-sizex="6" data-sizey="4">Duración media del viaje</option>
+<option value="average_miles_mode_confirm2" data-sizex="6" data-sizey="4">Duración promedio del viaje (seleccionado por los usuarios)</option>
+<option value="ntrips_per_day" data-sizex="6" data-sizey="4">Frecuencia de viaje</option>
+<option value="ntrips_per_weekday" data-sizex="6" data-sizey="4">Frecuencia de viaje (días de la semana)</option>
+<option value="ts_emissions_user" data-sizex="8" data-sizey="2">Series temporales de emisiones</option>
+<option value="ts_energy_user" data-sizex="8" data-sizey="2">Series temporales de energía</option>
+<option value="ts_emissions_vmt" data-sizex="8" data-sizey="2">Serie temporal de emisiones por milla</option>
+<option value="ts_users" data-sizex="8" data-sizey="2">Serie temporal de usuarios activos</option>
+<option value="ts_all_modes" data-sizex="8" data-sizey="2">Series temporales de todos los modos compartidos</option>
