--- a/frontend/metrics_program.html
+++ b/frontend/metrics_program.html
@@ -1,13 +1,20 @@
 <!-- Generic -->
 <option value="ntrips_mode_confirm" data-sizex="4" data-sizey="4">Number of trips</option>
 <option value="ntrips_commute_mode_confirm" data-sizex="4" data-sizey="4">Number of commute trips</option>
+<option value="ntrips_sensed_mode" data-sizex="4" data-sizey="4">Number of trips (sensed)</option>
 <option value="ntrips_purpose" data-sizex="4" data-sizey="4">Trip count by purpose</option>
 <option value="ntrips_under10miles_mode_confirm" data-sizex="4" data-sizey="4">Trip count under 10 miles</option>
+<option value="ntrips_under10miles_sensed_mode" data-sizex="4" data-sizey="4">Trip count under 10 miles (sensed)</option>
 <option value="miles_mode_confirm" data-sizex="4" data-sizey="4">Trip miles by mode</option>
+<option value="miles_sensed_mode" data-sizex="4" data-sizey="4">Trip miles by mode</option>
+<option value="miles_sensed_mode_land" data-sizex="4" data-sizey="4">Trip miles by land mode (sensed)</option>
 <option value="average_miles_mode_confirm" data-sizex="6" data-sizey="4">Average trip length</option>
+<option value="average_miles_sensed_mode" data-sizex="6" data-sizey="4">Average trip length (sensed)</option>
 <option value="average_miles_mode_confirm2" data-sizex="6" data-sizey="4">Average trip length (selected by users)</option>
 <option value="ntrips_per_day" data-sizex="6" data-sizey="4">Trip frequency</option>
+<option value="ntrips_sensed_per_day" data-sizex="6" data-sizey="4">Trip frequency (sensed)</option>
 <option value="ntrips_per_weekday" data-sizex="6" data-sizey="4">Trip frequency (weekday)</option>
+<option value="ntrips_sensed_per_weekday" data-sizex="6" data-sizey="4">Trip frequency (weekday, sensed)</option>
 <option value="ts_emissions_user" data-sizex="8" data-sizey="2">Timeseries of emissions</option>
 <option value="ts_energy_user" data-sizex="8" data-sizey="2">Timeseries of energy</option>
 <option value="ts_emissions_vmt" data-sizex="8" data-sizey="2">Timeseries of emissions per mile</option>
