--- a/frontend/index.html
+++ b/frontend/index.html
@@ -374,8 +374,14 @@
 					const STUDY_CONFIG = _getStudyName(window.location);
 					$.getJSON('https://raw.githubusercontent.com/e-mission/nrel-openpath-deploy-configs/main/configs/' + STUDY_CONFIG + '.nrel-op.json', function(data) {
 						// Load list of plots corresponding to study/program
-						if (data.intro.program_or_study=='program') {
-                            $.get("metrics_program.html", function(response) {
+						if (data.intro.program_or_study=='program')
+						{
+							// Note: We're disabling energy metrics on public dashboard when dynamic labels are available.
+							// TODO: Remove the if (data.label_options) in future when energy computation is handled properly.
+							if (data.label_options)
+							{
+								console.log("Dynamic Label is available for: " + STUDY_CONFIG)
+								$.get("metrics_program_withoutEnergyMetrics.html", function(response) {
                                 const configuredResponse = response.replaceAll("${data.intro.mode_studied}", data.intro.mode_studied);
                                 $('#metric').append(configuredResponse);
                                 addPreconfiguredMetrics([
@@ -387,18 +393,56 @@
                                     `ntrips_${data.intro.mode_studied}_per_weekday`,
                                     `sketch_CO2impact_${data.intro.mode_studied}`
                                 ]);
-                            });
-						} else {
-							$('#metric').load('metrics_study.html');
-                            addPreconfiguredMetrics([
-                                "ntrips_mode_confirm",
-                                "miles_mode_confirm",
-                                "ntrips_sensed_mode",
-                                "miles_sensed_mode",
-                                "ntrips_purpose",
-                                "ntrips_sensed_per_weekday",
-                                "ts_emissions_user"
+                            	});
+							}
+							else
+							{
+								console.log("Dynamic Label is unavailable for: " + STUDY_CONFIG)
+								$.get("metrics_program.html", function(response) {
+                                const configuredResponse = response.replaceAll("${data.intro.mode_studied}", data.intro.mode_studied);
+                                $('#metric').append(configuredResponse);
+                                addPreconfiguredMetrics([
+                                    "ntrips_mode_confirm",
+                                    "miles_mode_confirm",
+                                    "ntrips_sensed_mode",
+                                    "miles_sensed_mode",
+                                    `ntrips_${data.intro.mode_studied}_purpose`,
+                                    `ntrips_${data.intro.mode_studied}_per_weekday`,
+                                    `sketch_CO2impact_${data.intro.mode_studied}`
+                                ]);
+                            	});
+							}
+						} 
+						else  // CASE: STUDY
+						{
+							if (data.label_options)
+							{
+								console.log("Dynamic Label is available for: " + STUDY_CONFIG)
+								$('#metric').load('metrics_study_withoutEnergyMetrics.html');
+								addPreconfiguredMetrics([
+									"ntrips_mode_confirm",
+									"miles_mode_confirm",
+									"ntrips_sensed_mode",
+									"miles_sensed_mode",
+									"ntrips_purpose",
+									"ntrips_sensed_per_weekday",
+									"ts_emissions_user"
                             ]);
+							}
+							else
+							{
+								console.log("Dynamic Label is unavailable for: " + STUDY_CONFIG)
+								$('#metric').load('metrics_study.html');
+								addPreconfiguredMetrics([
+									"ntrips_mode_confirm",
+									"miles_mode_confirm",
+									"ntrips_sensed_mode",
+									"miles_sensed_mode",
+									"ntrips_purpose",
+									"ntrips_sensed_per_weekday",
+									"ts_emissions_user"
+								]);
+							}
 						};
                         // Figure out all months since start date to present
                         var date_options = "<option value=''>All data</option>";
