--- a/frontend/metrics_program_withoutEnergyMetrics.html
+++ b/frontend/metrics_program_withoutEnergyMetrics.html
@@ -17,7 +17,7 @@
 <option value="ntrips_per_weekday" data-sizex="6" data-sizey="4">Trip frequency (weekday)</option>
 <option value="ntrips_sensed_per_weekday" data-sizex="6" data-sizey="4">Trip frequency (weekday, sensed)</option>
 <option value="ts_emissions_user" data-sizex="8" data-sizey="2">Timeseries of emissions</option>
-<option value="ts_emissions_vmt" data-sizex="8" data-sizey="2">Timeseries of emissions per mile</option>
+<option value="ts_emissions_vmt" data-sizex="8" data-sizey="2">Timeseries of emissions per kilometer</option>
 <option value="ts_users" data-sizex="8" data-sizey="2">Timeseries of active users</option>
 <option value="ts_all_modes" data-sizex="8" data-sizey="2">Timeseries of all mode shares</option>
 <!-- Mode Specific -->
