Update sense keyword in the phrase for dropdown menu for Trip miles by mode (sensed).

--- a/frontend/metrics_program_withoutEnergyMetrics.html
+++ b/frontend/metrics_program_withoutEnergyMetrics.html
@@ -7,7 +7,7 @@
 <option value="ntrips_under10miles_mode_confirm" data-sizex="4" data-sizey="4">Trip count under 10 miles</option>
 <option value="ntrips_under10miles_sensed_mode" data-sizex="4" data-sizey="4">Trip count under 10 miles (sensed)</option>
 <option value="miles_mode_confirm" data-sizex="4" data-sizey="4">Trip miles by mode</option>
-<option value="miles_sensed_mode" data-sizex="4" data-sizey="4">Trip miles by mode</option>
+<option value="miles_sensed_mode" data-sizex="4" data-sizey="4">Trip miles by mode (sensed)</option>
 <option value="miles_sensed_mode_land" data-sizex="4" data-sizey="4">Trip miles by land mode (sensed)</option>
 <option value="average_miles_mode_confirm" data-sizex="6" data-sizey="4">Average trip length</option>
 <option value="average_miles_sensed_mode" data-sizex="6" data-sizey="4">Average trip length (sensed)</option>
