--- a/frontend/metrics_program_withoutEnergyMetrics.html
+++ b/frontend/metrics_program_withoutEnergyMetrics.html
@@ -1,3 +1,4 @@
+<!-- Replica of metrics_program.html without energy options-->
 <!-- Generic -->
 <option value="ntrips_mode_confirm" data-sizex="4" data-sizey="4">Number of trips</option>
 <option value="ntrips_commute_mode_confirm" data-sizex="4" data-sizey="4">Number of commute trips</option>
@@ -16,8 +17,7 @@
 <option value="ntrips_per_weekday" data-sizex="6" data-sizey="4">Trip frequency (weekday)</option>
 <option value="ntrips_sensed_per_weekday" data-sizex="6" data-sizey="4">Trip frequency (weekday, sensed)</option>
 <option value="ts_emissions_user" data-sizex="8" data-sizey="2">Timeseries of emissions</option>
-<option value="ts_energy_user" data-sizex="8" data-sizey="2">Timeseries of energy</option>
-<option value="ts_emissions_vmt" data-sizex="8" data-sizey="2">Timeseries of emissions per mile</option>
+<option value="ts_emissions_vmt" data-sizex="8" data-sizey="2">Timeseries of emissions per kilometer</option>
 <option value="ts_users" data-sizex="8" data-sizey="2">Timeseries of active users</option>
 <option value="ts_all_modes" data-sizex="8" data-sizey="2">Timeseries of all mode shares</option>
 <!-- Mode Specific -->
@@ -26,7 +26,6 @@
 <option value="average_miles_replaced_mode" data-sizex="4" data-sizey="4">Average Miles for each replaced mode (w/Other)</option>
 <option value="ntrips_${data.intro.mode_studied}_per_day" data-sizex="6" data-sizey="4">`${data.intro.mode_studied}` specific Trip frequency</option>
 <option value="ntrips_${data.intro.mode_studied}_per_weekday" data-sizex="6" data-sizey="4">`${data.intro.mode_studied}` specific Trips per weekday</option>
-<option value="sketch_energy_impact_${data.intro.mode_studied}" data-sizex="6" data-sizey="4">Sketch of `${data.intro.mode_studied}` specific energy impact</option>
 <option value="sketch_CO2impact_${data.intro.mode_studied}" data-sizex="6" data-sizey="4">Sketch of `${data.intro.mode_studied}` specific emission impact</option>
 <option value="ts_${data.intro.mode_studied}_share" data-sizex="8" data-sizey="2">Timeseries of `${data.intro.mode_studied}` specific trips</option>
 <option value="ts_${data.intro.mode_studied}_miles" data-sizex="8" data-sizey="2">Timeseries of `${data.intro.mode_studied}` specific milage</option>
