Update index.html, loads metrics_program.html when dynamic labels is unavailable.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -386,7 +386,7 @@
 							}
 							else
 							{
-								load_file = "metrics_program_withoutEnergyMetrics.html"
+								load_file = "metrics_program.html"
 								console.log("Dynamic Labels are unavailable for: " + STUDY_CONFIG)
 							}
 							$.get(load_file, function(response) {
