revert formatting changes

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -368,99 +368,103 @@
               return study_name;
             }
 
-				$(function () {
-					$(document).ready(function () {
-						// Simple solution to program/study plots dropdown; load the config and corresponding metrics.html
-						const STUDY_CONFIG = _getStudyName(window.location);
-						$.getJSON('https://raw.githubusercontent.com/e-mission/nrel-openpath-deploy-configs/main/configs/' + STUDY_CONFIG + '.nrel-op.json', function (data) {
-							// get units
-							const dist_units = (data.display_config.use_imperial) ? "miles" : "kilometers";
-							console.log("Units for display are", data.display_config.use_imperial, dist_units);
-							// Load list of plots corresponding to study/program
-							dynamic_labels = data.label_options
-							if (data.intro.program_or_study == 'program') {
-								// Note: We're disabling energy metrics on public dashboard when dynamic labels are available.
-								// TODO: Remove the if (data.label_options) in future when energy computation is handled properly.
-								if (dynamic_labels) {
-									load_file = "metrics_program_withoutEnergyMetrics.html"
-									console.log("Dynamic Labels are available for: " + STUDY_CONFIG)
-								}
-								else {
-									load_file = "metrics_program.html"
-									console.log("Dynamic Labels are unavailable for: " + STUDY_CONFIG)
-								}
-								$.get(load_file, function (response) {
-									const configuredResponse = response.replaceAll("${data.intro.mode_studied}", data.intro.mode_studied);
-									console.log("configuring units");
-									const unitConfigured = configuredResponse.replaceAll("${data.display_config.use_imperial}", dist_units);
-									$('#metric').append(unitConfigured);
-									addPreconfiguredMetrics([
-										"ntrips_mode_confirm",
-										"miles_mode_confirm",
-										"ntrips_sensed_mode",
-										"miles_sensed_mode",
-										`ntrips_${data.intro.mode_studied}_purpose`,
-										`ntrips_${data.intro.mode_studied}_per_weekday`,
-										`sketch_CO2impact_${data.intro.mode_studied}`
-									]);
-								});
+			$(function() {
+				$(document).ready(function() {
+					// Simple solution to program/study plots dropdown; load the config and corresponding metrics.html
+					const STUDY_CONFIG = _getStudyName(window.location);
+					$.getJSON('https://raw.githubusercontent.com/e-mission/nrel-openpath-deploy-configs/main/configs/' + STUDY_CONFIG + '.nrel-op.json', function(data) {
+						// get units
+						const dist_units = (data.display_config.use_imperial) ? "miles" : "kilometers";
+						console.log("Units for display are", data.display_config.use_imperial, dist_units);
+						// Load list of plots corresponding to study/program
+						dynamic_labels = data.label_options
+						if (data.intro.program_or_study=='program')
+						{
+							// Note: We're disabling energy metrics on public dashboard when dynamic labels are available.
+							// TODO: Remove the if (data.label_options) in future when energy computation is handled properly.
+							if (dynamic_labels)
+							{
+								load_file = "metrics_program_withoutEnergyMetrics.html"
+								console.log("Dynamic Labels are available for: " + STUDY_CONFIG)
+							}
+							else
+							{
+								load_file = "metrics_program.html"
+								console.log("Dynamic Labels are unavailable for: " + STUDY_CONFIG)
+							}
+							$.get(load_file, function(response) {
+                                const configuredResponse = response.replaceAll("${data.intro.mode_studied}", data.intro.mode_studied);
+																console.log("configuring units");
+																const unitConfigured = configuredResponse.replaceAll("${data.display_config.use_imperial}", dist_units);
+                                $('#metric').append(unitConfigured);
+                                addPreconfiguredMetrics([
+                                    "ntrips_mode_confirm",
+                                    "miles_mode_confirm",
+                                    "ntrips_sensed_mode",
+                                    "miles_sensed_mode",
+                                    `ntrips_${data.intro.mode_studied}_purpose`,
+                                    `ntrips_${data.intro.mode_studied}_per_weekday`,
+                                    `sketch_CO2impact_${data.intro.mode_studied}`
+                                ]);
+                            	});
+						} 
+						else  // CASE: STUDY
+						{
+							if (dynamic_labels)
+							{
+								console.log("Dynamic Labels are available for: " + STUDY_CONFIG)
+								load_file = 'metrics_study_withoutEnergyMetrics.html'
+								// $('#metric').load('metrics_study_withoutEnergyMetrics.html');
 							}
 							else  // CASE: STUDY
 							{
-								if (dynamic_labels) {
-									console.log("Dynamic Labels are available for: " + STUDY_CONFIG)
-									load_file = 'metrics_study_withoutEnergyMetrics.html'
-									// $('#metric').load('metrics_study_withoutEnergyMetrics.html');
-								}
-								else {
-									console.log("Dynamic Labels are unavailable for: " + STUDY_CONFIG)
-									load_file = 'metrics_study.html'
-									// $('#metric').load('metrics_study.html');
-								};
-								console.log("loading study, replacing units")
-								$.get(load_file, function (response) {
-									console.log("configuring units");
-									const unitConfigured = response.replaceAll("${data.display_config.use_imperial}", dist_units);
-									$('#metric').append(unitConfigured);
-									addPreconfiguredMetrics([
-										"ntrips_mode_confirm",
-										"miles_mode_confirm",
-										"ntrips_sensed_mode",
-										"miles_sensed_mode",
-										"ntrips_purpose",
-										"ntrips_sensed_per_weekday",
-										"ts_emissions_user"
-									]);
-								});
-							}
-							// Figure out all months since start date to present
-							var date_options = "<option value=''>All data</option>";
-							const dates = getMonthList(
-								Number.parseInt(data.intro.start_month),
-								Number.parseInt(data.intro.start_year));
-							for (var i = 0; i < dates.length; i++) {
-								const paddedMonth = String(dates[i][0]).padStart(2, '0');
-								const currYear = dates[i][1];
-								// add a trailing _ to support the "All data" option
-								// consistent with the image file construction `imgFile`
-								date_options += `<option value='${currYear}_${paddedMonth}_'>` + dates[i][0] + '/' + dates[i][1] + '</option>';
-							}
-							$('#date').append(date_options);
-							// The firstVal is now "everything", which will have
-							// the biggest numbers and look most impressive
-							// so let's stick with that and not reset to the lastVal
-							/*
-							// const lastVal = $("#date option:last-child").val();
-							// by setting the current val to the last one
-							// $("#date").val(lastVal);
-							*/
-							$('#program').load('programs.html');
-							const dynamicPublicDashboardName = `${data.intro.translated_text.en.deployment_name} Public Dashboard`;
-							const projectJoinPage = data.server.connectUrl.replace("api", "join");
-							document.title = dynamicPublicDashboardName;
-							$('#link_to_join_page').text(dynamicPublicDashboardName);
-							$('#link_to_join_page').attr('href', projectJoinPage);
-						});
+								console.log("Dynamic Labels are unavailable for: " + STUDY_CONFIG)
+								load_file = 'metrics_study.html'
+								// $('#metric').load('metrics_study.html');
+							};
+							console.log("loading study, replacing units")
+							$.get(load_file, function(response) {
+																console.log("configuring units");
+																const unitConfigured = response.replaceAll("${data.display_config.use_imperial}", dist_units);
+                                $('#metric').append(unitConfigured);
+                                addPreconfiguredMetrics([
+																	"ntrips_mode_confirm",
+																	"miles_mode_confirm",
+																	"ntrips_sensed_mode",
+																	"miles_sensed_mode",
+																	"ntrips_purpose",
+																	"ntrips_sensed_per_weekday",
+																	"ts_emissions_user"
+																]);
+                            	});
+						}
+                        // Figure out all months since start date to present
+                        var date_options = "<option value=''>All data</option>";
+                        const dates = getMonthList(
+                            Number.parseInt(data.intro.start_month),
+                            Number.parseInt(data.intro.start_year));
+                        for (var i=0;i<dates.length;i++){
+                            const paddedMonth = String(dates[i][0]).padStart(2, '0');
+                            const currYear = dates[i][1];
+                            // add a trailing _ to support the "All data" option
+                            // consistent with the image file construction `imgFile`
+                            date_options += `<option value='${currYear}_${paddedMonth}_'>` + dates[i][0] + '/' + dates[i][1] + '</option>';
+                        }
+                        $('#date').append(date_options);
+                        // The firstVal is now "everything", which will have
+                        // the biggest numbers and look most impressive
+                        // so let's stick with that and not reset to the lastVal
+                        /*
+                        // const lastVal = $("#date option:last-child").val();
+                        // by setting the current val to the last one
+                        // $("#date").val(lastVal);
+                        */
+					    $('#program').load('programs.html');
+                        const dynamicPublicDashboardName = `${data.intro.translated_text.en.deployment_name} Public Dashboard`
+                        const projectJoinPage = data.server.connectUrl.replace("api", "join");
+                        document.title = dynamicPublicDashboardName;
+                        $('#link_to_join_page').text(dynamicPublicDashboardName);
+                        $('#link_to_join_page').attr('href', projectJoinPage);
 					});
 				});
 		</script>
