--- a/frontend/metrics_program.html
+++ b/frontend/metrics_program.html
@@ -1,13 +1,9 @@
 <!-- Generic -->
-<option value="ntrips_mode_confirm" data-sizex="8" data-sizey="4">Number of trips</option>
-<option value="ntrips_commute_mode_confirm" data-sizex="4" data-sizey="4">Number of commute trips</option>
-<option value="ntrips_sensed_mode" data-sizex="4" data-sizey="4">Number of trips (sensed)</option>
-<option value="ntrips_purpose" data-sizex="4" data-sizey="4">Trip count by purpose</option>
-<option value="ntrips_under10miles_mode_confirm" data-sizex="4" data-sizey="4">Trip count under 80th pecentile</option>
-<option value="ntrips_under10miles_sensed_mode" data-sizex="4" data-sizey="4">Trip count under 80th percentile (sensed)</option>
-<option value="miles_mode_confirm" data-sizex="4" data-sizey="4">Trip length (${data.display_config.use_imperial}) by mode</option>
-<option value="miles_sensed_mode" data-sizex="4" data-sizey="4">Trip length (${data.display_config.use_imperial}) by mode (sensed)</option>
-<option value="miles_sensed_mode_land" data-sizex="4" data-sizey="4">Trip length by land mode (sensed)</option>
+<option value="ntrips_total" data-sizex="10" data-sizey="4">Number of trips</option>
+<option value="ntrips_under80" data-sizex="10" data-sizey="4">Number of trips (under 80th of total trips)</option>
+<option value="ntrips_commute_mode_confirm" data-sizex="10" data-sizey="4">Number of trips based on commute</option>
+<option value="distance_mode" data-sizex="10" data-sizey="4">Distance covered by mode</option>
+<option value="ntrips_purpose" data-sizex="10" data-sizey="4">Number of trips based on purpose</option>
 <option value="average_miles_mode_confirm" data-sizex="6" data-sizey="4">Average trip length (${data.display_config.use_imperial})</option>
 <option value="average_miles_sensed_mode" data-sizex="6" data-sizey="4">Average trip length (${data.display_config.use_imperial}) (sensed)</option>
 <option value="ntrips_per_day" data-sizex="6" data-sizey="4">Trip frequency</option>
@@ -20,7 +16,8 @@
 <option value="ts_users" data-sizex="8" data-sizey="2">Timeseries of active users</option>
 <option value="ts_all_modes" data-sizex="8" data-sizey="2">Timeseries of all mode shares</option>
 <!-- Mode Specific -->
-<option value="ntrips_${data.intro.mode_studied}_purpose" data-sizex="8" data-sizey="4">`${data.intro.mode_studied}` specific trip count by purpose</option>
+<option value="ntrips_${data.intro.mode_studied}_purpose" data-sizex="10" data-sizey="4">`${data.intro.mode_studied}` specific trip count by purpose</option>
+<option value="ntrips_${data.intro.mode_studied}_replaced" data-sizex="10" data-sizey="4">`${data.intro.mode_studied}` specific trip count by replaced mode</option>
 <option value="miles_${data.intro.mode_studied}_replaced_mode" data-sizex="4" data-sizey="4">`${data.intro.mode_studied}` specific trip length (${data.display_config.use_imperial}) by replaced mode</option>
 <option value="average_miles_replaced_mode" data-sizex="4" data-sizey="4">Average Miles for each replaced mode (w/Other)</option>
 <option value="ntrips_${data.intro.mode_studied}_per_day" data-sizex="6" data-sizey="4">`${data.intro.mode_studied}` specific Trip frequency</option>
