--- a/frontend/metrics_study_withoutEnergyMetrics.html
+++ b/frontend/metrics_study_withoutEnergyMetrics.html
@@ -1,14 +1,10 @@
 <!-- Replica of metrics_study.html without energy option-->
 <!-- Generic -->
-<option value="ntrips_mode_confirm" data-sizex="8" data-sizey="4">Number of trips</option>
-<option value="ntrips_commute_mode_confirm" data-sizex="4" data-sizey="4">Number of commute trips</option>
-<option value="ntrips_sensed_mode" data-sizex="4" data-sizey="4">Number of trips (sensed)</option>
-<option value="ntrips_purpose" data-sizex="4" data-sizey="4">Trip count by purpose</option>
-<option value="ntrips_under10miles_mode_confirm" data-sizex="4" data-sizey="4">Trip count under 80th Percentile</option>
-<option value="ntrips_under10miles_sensed_mode" data-sizex="4" data-sizey="4">Trip count under 80th Percentile (sensed)</option>
-<option value="miles_mode_confirm" data-sizex="4" data-sizey="4">Trip distance (${data.display_config.use_imperial}) by mode</option>
-<option value="miles_sensed_mode" data-sizex="4" data-sizey="4">Trip distance (${data.display_config.use_imperial}) by mode (sensed)</option>
-<option value="miles_sensed_mode_land" data-sizex="4" data-sizey="4">Trip distance by land mode (sensed)</option>
+<option value="ntrips_total" data-sizex="10" data-sizey="4">Number of trips</option>
+<option value="ntrips_under80" data-sizex="10" data-sizey="4">Number of trips (under 80th of total trips)</option>
+<option value="ntrips_commute_mode_confirm" data-sizex="10" data-sizey="4">Number of commute trips</option>
+<option value="distance_mode" data-sizex="10" data-sizey="4">Distance covered by mode</option>
+<option value="ntrips_purpose" data-sizex="10" data-sizey="4">Number of trips based on purpose</option>
 <option value="average_miles_mode_confirm" data-sizex="6" data-sizey="4">Average trip length (${data.display_config.use_imperial})</option>
 <option value="average_miles_sensed_mode" data-sizex="6" data-sizey="4">Average trip length (${data.display_config.use_imperial}) (sensed)</option>
 <option value="ntrips_per_day" data-sizex="6" data-sizey="4">Trip frequency</option>
