Experiment with adding html file in the same widget as image.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -534,6 +534,7 @@
           + labelText
           + "<button class='remove'>x</button>"
           + "<img src='" + imgFile + "' alt='" + altText + "' width=90% height=90%>"
+          + "<object data='" + htmlFile + "' type='text/html' style='margin-top: 20px;' width='100%' height='100%'></object>"
           + "</li>",
           sizex, sizey];
         gridster.add_widget.apply(gridster, nw);
