--- a/frontend/index.html
+++ b/frontend/index.html
@@ -156,6 +156,10 @@
             <li class="form-inline">
               <button class="btn btn-danger btn-block js-add-new">Add</button>
             </li>
+            <li class="form-inline" style="display: flex; align-items: center;">
+              <input type="checkbox" class="js-add-new-checkbox" value="0" style="margin-left: 10px;">
+              <span style="color: black; margin-left: 10px;">Additional Details</span>
+            </li>
           </ul>
         </div>
 
@@ -534,10 +538,19 @@
           + labelText
           + "<button class='remove'>x</button>"
           + "<img src='" + imgFile + "' alt='" + altText + "' width=90% height=90%>"
-          + "<object data='" + htmlFile + "' type='text/html' style='margin-top: 20px;' width='100%' height='100%'></object>"
+          // + "<object data='" + htmlFile + "' type='text/html' style='margin-top: 20px;' width='100%' height='100%'></object>"
           + "</li>",
           sizex, sizey];
         gridster.add_widget.apply(gridster, nw);
+        if ($('.js-add-new-checkbox').is(':checked')) {
+          const nw_1 = ["<li data-min-sizex='2' data-min-sizey='2'>"
+            + labelText
+            + "<button class='remove'>x</button>"
+            + "<object data='" + htmlFile + "' type='text/html' style='margin-top: 20px;' width='90%' height='90%'></object>"
+            + "</li>",
+            sizex, sizey];
+            gridster.add_widget.apply(gridster, nw_1);
+        }
       });
 
       $('body').on("click", ".gridster ul > li .remove", function () {
